rs/macros/tests/ui/gservice_fails_override_signature_mismatch.stderr
error[E0080]: evaluation panicked: Override signature mismatch for method `Foo`
  --> tests/ui/gservice_fails_override_signature_mismatch.rs:21:1
   |
21 | #[service(extends = BaseService)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `inherited_service_meta::_` failed here
